# spotify-cli

./: Cargo.toml  README.md
src/: main.rs
src/lib/: util.rs
