[package]
name = "spotify-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.9", features = [ "json" ]}
tokio = { version = "1.16.1", features = ["macros", "io-util", "rt-multi-thread"] }
base64 = "0.13.0"
spotify-oauth = "0.3.0"
async-std = { version = "1.10.0", features = ["attributes"]}
open = "2.0.2"
rspotify = { version = "0.11.3", features = ["cli"]}
url = "2.2.2"
dotenv = "0.15.0"